--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -10,17 +10,19 @@
     align-items: start
     margin-bottom: 95px
   &__logo
-    width: 155px
+    width: 153px
     align-self: center
     grid-row: 1 / 3
   &__category
     grid-row: 1 / 4
+    margin-left: 3px
   &__social
     &-network
       display: flex
       align-content: center
       grid-row: 2 / 4
       grid-column: span 2
+      margin-left: 5px
     &-links
       display: flex
       align-items: center
@@ -36,8 +38,9 @@
     align-items: center
     justify-content: space-between
     flex-wrap: wrap
+    margin-left: 6px
   &__title
-    margin: 0 0 16px 0
+    margin: 0 0 19px 0
     font-weight: 700
     font-size: 18px
     line-height: 23px
@@ -45,12 +48,16 @@
     &--inline
       margin: 0 43px 0 0
     &--mb-3
-      margin-bottom: 30px
+      margin-bottom: 33px
+      margin-left: 5px
     &-contact
       line-height: 45px
       margin-bottom: 10px
+  &__additional
+    margin-left: 5px
   &__legal
     justify-self: end
+    margin-right: 5px
   &__ul
     padding: 0
     margin: 0
@@ -60,11 +67,12 @@
     align-items: flex-start
     font-weight: 400
     font-size: 14px
-    line-height: 160%
+    line-height: 159%
     color: $text-subscribe
   &__icon
     &-wrapper
-      min-width: 40px
+      min-width: 42px
+      padding: 4px
   &__link
     color: inherit
     text-decoration: none
@@ -76,7 +84,7 @@
     font-size: 14px
     line-height: 160%
     color: $text-subscribe
-    margin-bottom: 20px
+    margin-bottom: 21px
   &__input
     font-weight: 400
     font-size: 12px
@@ -86,7 +94,7 @@
     border: none
     border-radius: 4px
     padding: 0 23px
-    height: 55px
+    height: 50px
     flex-basis: 47%
     margin-bottom: 15px
     outline: none
@@ -109,7 +117,7 @@
     &::placeholder
       color: $text-subscribe
   &__button
-    min-width: 160px
+    min-width: 159px
     min-height: 50px
     padding: 18px
     border-radius: 4px
