create: added model dialog

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -31,5 +31,8 @@
 //Подкючение для блока footer.sass
 @import 'blocks/_footer'
 
+//Подкючение для блока _modal.sass
+@import 'blocks/_modal'
+
 //Подключение стилей для адаптива
 @import 'media'
