--- a/css/style.css
+++ b/css/style.css
@@ -1647,6 +1647,38 @@ img {
   background-image: url("../img/instagram_activ.svg");
 }
 
+.modal__overlay {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: rgba(0, 143, 223, 0.39);
+  z-index: 100;
+}
+
+.modal__dialog {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: 105;
+  max-width: 487px;
+  padding: 33px 80px;
+  border-radius: 8px;
+  background-color: #0A223D;
+  color: #FFFFFF;
+}
+
+.modal__close {
+  position: absolute;
+  right: 18px;
+  top: 17px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
