--- a/css/style.css
+++ b/css/style.css
@@ -361,6 +361,90 @@ img {
   max-width: 100%;
 }
 
+.form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.input {
+  background-color: #FFFFFF;
+  border: none;
+  border-radius: 4px;
+  padding: 0 23px;
+  height: 50px;
+  outline: none;
+  color: #333333;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.input::-webkit-input-placeholder {
+  color: #BDBDBD;
+}
+
+.input:-ms-input-placeholder {
+  color: #BDBDBD;
+}
+
+.input::-ms-input-placeholder {
+  color: #BDBDBD;
+}
+
+.input::placeholder {
+  color: #BDBDBD;
+}
+
+.message {
+  height: 123px;
+  padding: 18px 23px;
+  border-radius: 4px;
+  border: none;
+  background-color: #FFFFFF;
+  resize: none;
+  outline: none;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  color: #333333;
+}
+
+.message::-webkit-input-placeholder {
+  color: #BDBDBD;
+}
+
+.message:-ms-input-placeholder {
+  color: #BDBDBD;
+}
+
+.message::-ms-input-placeholder {
+  color: #BDBDBD;
+}
+
+.message::placeholder {
+  color: #BDBDBD;
+}
+
+.button {
+  border-radius: 4px;
+  border: none;
+  background-color: #ec1f46;
+  color: #FFFFFF;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  cursor: pointer;
+}
+
 .navbar {
   background-color: #ffffff;
 }
@@ -1437,17 +1521,6 @@ img {
 }
 
 .footer__form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   margin-left: 6px;
 }
 
@@ -1526,82 +1599,21 @@ img {
 }
 
 .footer__input {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 15px;
-  color: #333333;
-  background-color: #FFFFFF;
-  border: none;
-  border-radius: 4px;
-  padding: 0 23px;
-  height: 50px;
   -ms-flex-preferred-size: 47%;
       flex-basis: 47%;
   margin-bottom: 15px;
-  outline: none;
-}
-
-.footer__input::-webkit-input-placeholder {
-  color: #BDBDBD;
-}
-
-.footer__input:-ms-input-placeholder {
-  color: #BDBDBD;
-}
-
-.footer__input::-ms-input-placeholder {
-  color: #BDBDBD;
-}
-
-.footer__input::placeholder {
-  color: #BDBDBD;
 }
 
 .footer__message {
-  height: 123px;
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
-  padding: 18px 23px;
   margin-bottom: 23px;
-  border-radius: 4px;
-  border: none;
-  background-color: #FFFFFF;
-  resize: none;
-  outline: none;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 15px;
-  color: #333333;
-}
-
-.footer__message::-webkit-input-placeholder {
-  color: #BDBDBD;
-}
-
-.footer__message:-ms-input-placeholder {
-  color: #BDBDBD;
-}
-
-.footer__message::-ms-input-placeholder {
-  color: #BDBDBD;
-}
-
-.footer__message::placeholder {
-  color: #BDBDBD;
 }
 
 .footer__button {
   min-width: 159px;
   min-height: 50px;
   padding: 18px;
-  border-radius: 4px;
-  border: none;
-  background-color: #ec1f46;
-  font-weight: 700;
-  font-size: 12px;
-  line-height: 15px;
-  color: #FFFFFF;
-  cursor: pointer;
 }
 
 .footer__info {
@@ -1655,20 +1667,39 @@ img {
   bottom: 0;
   background-color: rgba(0, 143, 223, 0.39);
   z-index: 100;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: opacity 0.2s;
+  transition: opacity 0.2s;
+}
+
+.modal__overlay--visible {
+  visibility: visible;
+  opacity: 1;
 }
 
 .modal__dialog {
   position: fixed;
   left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  top: 63%;
+  -webkit-transform: translate(-50%, -63%);
+          transform: translate(-50%, -63%);
   z-index: 105;
-  max-width: 487px;
-  padding: 33px 80px;
+  max-width: 480px;
+  height: 488px;
+  padding: 30px 88px 30px 91px;
   border-radius: 8px;
   background-color: #0A223D;
   color: #FFFFFF;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: opacity 0.2s;
+  transition: opacity 0.2s;
+}
+
+.modal__dialog--visible {
+  visibility: visible;
+  opacity: 1;
 }
 
 .modal__close {
@@ -1677,6 +1708,40 @@ img {
   top: 17px;
   text-decoration: none;
   cursor: pointer;
+}
+
+.modal__input {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  margin-bottom: 15px;
+}
+
+.modal__message {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  margin-bottom: 14px;
+}
+
+.modal__button {
+  min-width: 159px;
+  min-height: 50px;
+  padding: 18px;
+}
+
+.modal__title {
+  margin: 0 0 19px 0;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.modal__info {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  color: #E0E0E0;
 }
 
 @media (max-width: 1200px) {
