--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -12,3 +12,48 @@ body
 
 img
   max-width: 100%
+
+.form
+  display: flex
+  align-items: center
+  justify-content: space-between
+  flex-wrap: wrap
+
+.input
+  background-color: $light
+  border: none
+  border-radius: 4px
+  padding: 0 23px
+  height: 50px
+  outline: none
+  color: $text-color
+  font-weight: 400
+  font-size: 12px
+  line-height: 15px
+  &::placeholder
+    color: $text-subscribe
+
+.message
+  height: 123px
+  padding: 18px 23px
+  border-radius: 4px
+  border: none
+  background-color: $light
+  resize: none
+  outline: none
+  font-weight: 400
+  font-size: 12px
+  line-height: 15px
+  color: $text-color
+  &::placeholder
+    color: $text-subscribe
+
+.button
+  border-radius: 4px
+  border: none
+  background-color: $primary
+  color: $light
+  font-weight: 700
+  font-size: 12px
+  line-height: 15px
+  cursor: pointer
