--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -110,10 +110,11 @@
       grid-row-gap: 50px
     &__input
       height: 53px
-    &__logo
-      width: 96px
+    &--logo
       grid-row: 1 / 2
       grid-column: span 1
+    &__logo
+      width: 96px
     &__social
       &-network
         grid-row: 1 / 2
@@ -362,7 +363,7 @@
   .footer
     &-wrapper
       grid-template-columns: repeat(5, 1fr)
-    &__logo
+    &--logo
       grid-row: 1 / 2
       grid-column: span 1
     &__social
@@ -495,7 +496,7 @@
     &-wrapper
       grid-template-columns: 1fr
       grid-row-gap: 37px
-    &__logo
+    &--logo
       grid-row: 1
       grid-column: 1
     &__social
