--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -182,3 +182,9 @@
     border-radius: 10px
     border: none
     overflow: hidden
+.button
+  &__thankyou
+    margin-top: 40px
+    min-width: 110px
+    min-height: 40px
+    padding: 7px 22px
