--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -9,10 +9,11 @@
     grid-auto-rows: minmax(40px, min-content)
     align-items: start
     margin-bottom: 95px
-  &__logo
-    width: 153px
+  &--logo
     align-self: center
     grid-row: 1 / 3
+  &__logo
+    width: 153px
   &__category
     grid-row: 1 / 4
     margin-left: 3px
