--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -110,7 +110,7 @@
       grid-row-gap: 50px
     &__input
       height: 53px
-    &--logo
+    &-logo
       grid-row: 1 / 2
       grid-column: span 1
     &__logo
@@ -363,7 +363,7 @@
   .footer
     &-wrapper
       grid-template-columns: repeat(5, 1fr)
-    &--logo
+    &-logo
       grid-row: 1 / 2
       grid-column: span 1
     &__social
@@ -496,7 +496,7 @@
     &-wrapper
       grid-template-columns: 1fr
       grid-row-gap: 37px
-    &--logo
+    &-logo
       grid-row: 1
       grid-column: 1
     &__social
