--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -20,7 +20,7 @@
     transform: translate(-50%, -63%)
     z-index: 105
     max-width: 480px
-    min-height: 488px
+    max-height: 100vh
     padding: 30px 88px 30px 91px
     border-radius: 8px
     background-color: $dark
@@ -28,6 +28,7 @@
     visibility: hidden
     opacity: 0
     transition: opacity 0.2s
+    overflow-y: auto
     &--visible
       visibility: visible
       opacity: 1
