--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -9,7 +9,7 @@
     grid-auto-rows: minmax(40px, min-content)
     align-items: start
     margin-bottom: 95px
-  &--logo
+  &-logo
     align-self: center
     grid-row: 1 / 3
   &__logo
