--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -43,7 +43,7 @@
     line-height: 23px
     text-transform: uppercase
     &--inline
-      margin: 0 43px 0 0
+      margin: 2px 43px 0 0
     &--mb-3
       margin-bottom: 33px
       margin-left: 5px
@@ -64,7 +64,7 @@
     align-items: flex-start
     font-weight: 400
     font-size: 14px
-    line-height: 159%
+    line-height: 155%
     color: $text-subscribe
   &__icon
     &-wrapper
@@ -97,6 +97,31 @@
     font-size: 12px
     line-height: 15px
     color: #E0E0E0
+  &__bottom
+    display: flex
+    justify-content: space-between
+    align-items: center
+    width: 696px
+    margin-top: 97px
+    margin-left: auto
+    margin-right: 0
+
+.main-information
+  display: flex
+  justify-content: space-between
+  width: 283px
+  &__link
+    font-weight: 400
+    font-size: 12px
+    line-height: 15px
+    color: $light
+    text-decoration: none
+    cursor: pointer
+    &:hover
+      color: $primary
+  &__image
+    width: 136px
+    height: 22px
 
 .img
   &-facebook
