--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -160,6 +160,8 @@
     color: inherit
     text-decoration: none
     text-transform: uppercase
+    &:hover
+      color: $primary
   &__call-description
     margin-left: 9px
   &__button
