--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -105,6 +105,9 @@
     margin-top: 97px
     margin-left: auto
     margin-right: 0
+    &-image
+      width: 136px
+      height: 22px
 
 .main-information
   display: flex
@@ -119,9 +122,6 @@
     cursor: pointer
     &:hover
       color: $primary
-  &__image
-    width: 136px
-    height: 22px
 
 .img
   &-facebook
