--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -57,3 +57,10 @@ img
   font-size: 12px
   line-height: 15px
   cursor: pointer
+
+.invalid
+  color: $primary
+  border-bottom: 1px solid $primary
+  font-weight: 400
+  font-size: 12px
+  line-height: 15px
