--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -83,8 +83,10 @@
     color: $text-subscribe
     margin-bottom: 21px
   &__input
-    flex-basis: 47%
-    margin-bottom: 15px
+    width: 100%
+    &-group
+      flex-basis: 47%
+      margin-bottom: 15px
   &__message
     flex-basis: 100%
     margin-bottom: 23px
