--- a/css/style.css
+++ b/css/style.css
@@ -445,6 +445,14 @@ img {
   cursor: pointer;
 }
 
+.invalid {
+  color: #ec1f46;
+  border-bottom: 1px solid #ec1f46;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+}
+
 .navbar {
   background-color: #ffffff;
 }
@@ -992,7 +1000,7 @@ img {
   text-transform: uppercase;
 }
 
-.subscribe {
+.newsletter-subscribe {
   position: relative;
   width: 351px;
   height: 55px;
@@ -1000,7 +1008,7 @@ img {
   overflow: hidden;
 }
 
-.subscribe__input {
+.newsletter-subscribe__input {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -1014,23 +1022,23 @@ img {
   outline: none;
 }
 
-.subscribe__input::-webkit-input-placeholder {
+.newsletter-subscribe__input::-webkit-input-placeholder {
   color: #BDBDBD;
 }
 
-.subscribe__input:-ms-input-placeholder {
+.newsletter-subscribe__input:-ms-input-placeholder {
   color: #BDBDBD;
 }
 
-.subscribe__input::-ms-input-placeholder {
+.newsletter-subscribe__input::-ms-input-placeholder {
   color: #BDBDBD;
 }
 
-.subscribe__input::placeholder {
+.newsletter-subscribe__input::placeholder {
   color: #BDBDBD;
 }
 
-.subscribe__button {
+.newsletter-subscribe__button {
   position: absolute;
   right: 0;
   top: 0;
@@ -1617,6 +1625,10 @@ img {
 }
 
 .footer__input {
+  width: 100%;
+}
+
+.footer__input-group {
   -ms-flex-preferred-size: 47%;
       flex-basis: 47%;
   margin-bottom: 15px;
@@ -1743,13 +1755,13 @@ img {
 .modal__dialog {
   position: fixed;
   left: 50%;
-  top: 63%;
-  -webkit-transform: translate(-50%, -63%);
-          transform: translate(-50%, -63%);
+  top: 67%;
+  -webkit-transform: translate(-50%, -62%);
+          transform: translate(-50%, -62%);
   z-index: 105;
   max-width: 480px;
   max-height: 100vh;
-  padding: 30px 88px 30px 91px;
+  padding: 37px 88px 54px 91px;
   border-radius: 8px;
   background-color: #0A223D;
   color: #FFFFFF;
@@ -1776,23 +1788,24 @@ img {
 .modal__input {
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
-  margin-bottom: 15px;
+  margin-top: 14px;
 }
 
 .modal__message {
+  margin-top: 15px;
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
-  margin-bottom: 14px;
 }
 
 .modal__button {
   min-width: 159px;
   min-height: 50px;
   padding: 18px;
+  margin-top: 17px;
 }
 
 .modal__title {
-  margin: 0 0 19px 0;
+  margin: 0;
   font-weight: 700;
   font-size: 18px;
   line-height: 23px;
@@ -1805,6 +1818,12 @@ img {
   font-size: 12px;
   line-height: 15px;
   color: #E0E0E0;
+}
+
+.modal__form {
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
 }
 
 @media (max-width: 1200px) {
@@ -1895,7 +1914,7 @@ img {
   .newsletter-title {
     line-height: 25px;
   }
-  .subscribe {
+  .newsletter-subscribe {
     width: 350px;
   }
   .packages__title {
@@ -1960,7 +1979,7 @@ img {
         grid-template-columns: repeat(8, 1fr);
     grid-row-gap: 50px;
   }
-  .footer__input {
+  .footer__input-group {
     height: 53px;
   }
   .footer-logo {
@@ -2056,7 +2075,8 @@ img {
     background-image: url("../img/instagram.svg");
   }
   .modal__dialog {
-    padding: 30px 60px;
+    max-width: 400px;
+    padding: 30px 70px;
   }
   .modal__info {
     -webkit-box-ordinal-group: 2;
@@ -2064,7 +2084,7 @@ img {
             order: 1;
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
-    margin-bottom: 15px;
+    margin-top: 15px;
   }
   .modal__button {
     -webkit-box-ordinal-group: 3;
@@ -2278,7 +2298,7 @@ img {
     font-size: 30px;
     line-height: 38px;
   }
-  .subscribe {
+  .newsletter-subscribe {
     width: 100%;
   }
   .reviews__title {
@@ -2412,10 +2432,10 @@ img {
     font-size: 30px;
     line-height: 44px;
   }
-  .subscribe {
+  .newsletter-subscribe {
     width: 95%;
   }
-  .subscribe__input {
+  .newsletter-subscribe__input {
     padding-left: 20px;
   }
   .reviews {
@@ -2576,7 +2596,7 @@ img {
     min-width: 31px;
     padding: 3px;
   }
-  .footer__input {
+  .footer__input-group {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
     height: 52px;
@@ -2615,8 +2635,8 @@ img {
     height: 30px;
   }
   .modal__dialog {
-    max-width: 280px;
-    padding: 30px 25px;
+    max-width: 282px;
+    padding: 30px 35px;
   }
 }
 /*# sourceMappingURL=style.css.map */
