--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -16,12 +16,12 @@
   &__dialog
     position: fixed
     left: 50%
-    top: 63%
-    transform: translate(-50%, -63%)
+    top: 67%
+    transform: translate(-50%, -62%)
     z-index: 105
     max-width: 480px
     max-height: 100vh
-    padding: 30px 88px 30px 91px
+    padding: 37px 88px 54px 91px
     border-radius: 8px
     background-color: $dark
     color: $light
@@ -40,16 +40,17 @@
     cursor: pointer
   &__input
     flex-basis: 100%
-    margin-bottom: 15px
+    margin-top: 14px
   &__message
+    margin-top: 15px
     flex-basis: 100%
-    margin-bottom: 14px
   &__button
     min-width: 159px
     min-height: 50px
     padding: 18px
+    margin-top: 17px
   &__title
-    margin: 0 0 19px 0
+    margin: 0
     font-weight: 700
     font-size: 18px
     line-height: 23px
@@ -60,3 +61,5 @@
     font-size: 12px
     line-height: 15px
     color: #E0E0E0
+  &__form
+    align-items: baseline
