--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -30,36 +30,36 @@
       font-size: 36px
       line-height: 45px
       text-transform: uppercase
-.subscribe
-  position: relative
-  width: 351px
-  height: 55px
-  border-radius: 4px
-  overflow: hidden
-  &__input
-    position: absolute
-    width: 100%
-    height: 100%
-    border: none
-    padding-left: 33px
-    padding-right: 75px
-    font-weight: 300
-    font-size: 14px
-    line-height: 18px
-    color: $text-color
-    outline: none
-    &::placeholder
-      color: $text-subscribe
-  &__button
-    position: absolute
-    right: 0
-    top: 0
-    min-width: 65px
-    height: 100%
-    border: none
-    background-color: $primary
-    color: $light
-    font-weight: 700
-    font-size: 12px
-    line-height: 15px
-    cursor: pointer
+  &-subscribe
+    position: relative
+    width: 351px
+    height: 55px
+    border-radius: 4px
+    overflow: hidden
+    &__input
+      position: absolute
+      width: 100%
+      height: 100%
+      border: none
+      padding-left: 33px
+      padding-right: 75px
+      font-weight: 300
+      font-size: 14px
+      line-height: 18px
+      color: $text-color
+      outline: none
+      &::placeholder
+        color: $text-subscribe
+    &__button
+      position: absolute
+      right: 0
+      top: 0
+      min-width: 65px
+      height: 100%
+      border: none
+      background-color: $primary
+      color: $light
+      font-weight: 700
+      font-size: 12px
+      line-height: 15px
+      cursor: pointer
