--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -55,7 +55,8 @@
     color: $text-color
     outline: none
     &::placeholder
-      color: $text-color
+      color: $text-subscribe
+      opacity: 1
   &__button
     position: absolute
     top: 0
