--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -85,8 +85,12 @@
   &__input
     width: 100%
     &-group
-      flex-basis: 47%
       margin-bottom: 15px
+      flex-basis: 47%
+    &-wrapper
+      display: flex
+      justify-content: space-between
+      width: 100%
   &__message
     flex-basis: 100%
     margin-bottom: 23px
@@ -110,6 +114,12 @@
     &-image
       width: 136px
       height: 22px
+  &__img
+    fill: $text-subscribe
+    width: 21px
+    height: 21px
+    &:hover
+      fill: $primary
 
 .main-information
   display: flex
@@ -124,29 +134,3 @@
     cursor: pointer
     &:hover
       color: $primary
-
-.img
-  &-facebook
-    background-image: url("../img/facebook.svg")
-    background-repeat: no-repeat
-    background-position: center
-    width: 21px
-    height: 21px
-    &:hover
-      background-image: url("../img/facebook_activ.svg")
-  &-youtube
-    background-image: url("../img/youtube.svg")
-    background-repeat: no-repeat
-    background-position: center
-    width: 21px
-    height: 21px
-    &:hover
-      background-image: url("../img/youtube_activ.svg")
-  &-instagram
-    background-image: url("../img/instagram.svg")
-    background-repeat: no-repeat
-    background-position: center
-    width: 21px
-    height: 21px
-    &:hover
-      background-image: url("../img/instagram_activ.svg")
