--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -1,5 +1,6 @@
 .newsletter
   position: relative
+  overflow: hidden
   padding: 97px 0 88px 0
   &::before
     content: ''
@@ -12,35 +13,42 @@
     height: 100%
     background-color: rgba($dark, 0.8)
   &-wrapper
-    position: relative
+    margin: 0 auto
+    // position: relative
     display: flex
     align-items: center
     justify-content: space-between
     max-width: 731px
-    margin: auto
   &-title
+    max-width: 250px
+    z-index: 5
     margin: 0
     color: $light
     font-weight: 300
     font-size: 24px
     line-height: 30px
     &__strong
-      display: block
+      // display: block
       font-weight: 600
       font-size: 36px
       line-height: 45px
       text-transform: uppercase
   &-subscribe
     position: relative
+    margin-top: 2px
+    margin-right: auto
+    margin-left: 131px
+    margin-bottom: 0
     width: 351px
     height: 55px
     border-radius: 4px
     overflow: hidden
     &__input
-      position: absolute
-      width: 100%
-      height: 100%
+      // position: absolute
+      // width: 100%
+      // height: 100%
       border: none
+      width: 350px
       padding-left: 33px
       padding-right: 75px
       font-weight: 300
@@ -48,6 +56,9 @@
       line-height: 18px
       color: $text-color
       outline: none
+      height: 55px
+      border-radius: 4px
+      overflow: hidden
       &::placeholder
         color: $text-subscribe
     &__button
@@ -55,11 +66,13 @@
       right: 0
       top: 0
       min-width: 65px
-      height: 100%
+      height: 55px
       border: none
+      border-radius: 0 4px 4px 0
       background-color: $primary
       color: $light
       font-weight: 700
       font-size: 12px
       line-height: 15px
       cursor: pointer
+      overflow: hidden
